# twohouse

./: README.md  meson.build  org.gnome.Example.json
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.Example.json/: init
.flatpak-builder/checksums/: x86_64-org.gnome.Example.json
.flatpak/flatpak-builder/cache/refs/heads/x86_64-home_2Fheliguy_2FProjects_2Ftwohouse_2Forg.gnome.Example.json/: init
.flatpak/flatpak-builder/cache/refs/heads/x86_64-var_2Fhome_2Fheliguy_2FProjects_2Ftwohouse_2Forg.gnome.Example.json/: init
.flatpak/flatpak-builder/checksums/: x86_64-org.gnome.Example.json
.flatpak/ostree-repo/: summary  summary.idx
.flatpak/ostree-repo/refs/heads/app/org.gnome.Example/x86_64/: master
data/: meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: common_resources.py  flatpak.py  main.py  meson.build  packages_view.blp  packages_view.py  properties_pane.blp  properties_pane.py  remotes_view.blp  remotes_view.py  snapshots_view.blp  snapshots_view.py  test.py  twohouse.gresource.xml  twohouse.in  user_data_view.blp  user_data_view.py  window.blp  window.py
